@@ -4,6 +4,10 @@ Wed May 23 23:21:03 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 	  nicklist (/NAMES etc).  Affected file is
 	  apps/irssi/src/silc/core/client_ops.c.
 
+	* Fixed SILC Plugin crash when stopping client library before
+	  it has been started.  Affected file is
+	  apps/irssi/src/silc/core/silc-core.c.
+
 Tue May 22 17:18:54 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* For SILC Client and SILC Server check for 1.1 Toolkit
